dist/1.0/bin/sample/retrieveUnpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Last_Modified_By_Ext_Txt__c</fullName>
        <description>Extranet User (not represented in SFDC) which modified reord</description>
        <inlineHelpText>Extranet User (not represented in SFDC) which modified reord</inlineHelpText>
        <label>Last Modified by Extranet</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Week_End_Date__c</fullName>
        <description>Week End Date calculated based on current Date</description>
        <formula>CASE( 
MOD(TODAY() - DATE(1900, 1, 7), 7), 
0, TODAY() - 0 -7, 
1, TODAY() +6 - 7, 
2, TODAY() +5 -7, 
3, TODAY() +4 -7, 
4, TODAY() +3 -7, 
5, TODAY() +2 -7, 
6, TODAY() +1 - 7, null)</formula>
        <inlineHelpText>Week End Date calculated based on current Date</inlineHelpText>
        <label>Last Week End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Week_Start_Date__c</fullName>
        <description>Week Start Date calculated based on current date</description>
        <formula>CASE( 
MOD(TODAY() - DATE(1900, 1, 7), 7), 
0, TODAY() - 6 - 7, 
1, TODAY() - 0 - 7, 
2, TODAY() - 1 - 7, 
3, TODAY() - 2 - 7, 
4, TODAY() - 3 - 7, 
5, TODAY() - 4 - 7, 
6, TODAY() - 5 - 7, null)</formula>
        <inlineHelpText>Week Start Date calculated based on current date</inlineHelpText>
        <label>Last Week Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Week__c</fullName>
        <description>Last week Start and End Dates</description>
        <formula>TEXT(Last_Week_Start_Date__c) &amp;BR()&amp; TEXT(Last_Week_End_Date__c)</formula>
        <inlineHelpText>Last week Start and End Dates</inlineHelpText>
        <label>Last Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_CBCT__c</fullName>
        <formula>IF(ISPICKVAL( Calculation_ID_Type__c,&quot;CBCT&quot;), HYPERLINK(&quot;https://is-bct.in.gtsce.com//restricted/showCalculation&quot; &amp; &quot;-&quot; &amp; 
MID(Calculation_ID__c, 1, (FIND( &quot;.&quot;,Calculation_ID__c)-1)) &amp; &quot;-&quot; &amp; MID(Calculation_ID__c,(FIND( &quot;.&quot;,Calculation_ID__c)+1),10),
   Calculation_ID__c ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to CBCT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Opportunity__c</fullName>
        <description>Link to Opporunity for email templates</description>
        <formula>HYPERLINK( &quot;/&quot;+Id,  Opportunity_No__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Opporunity for email templates</inlineHelpText>
        <label>Link to Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Opportunity_Owner__c</fullName>
        <description>Contact corresponding to Owner in Local System</description>
        <inlineHelpText>Contact corresponding to Owner in Local System</inlineHelpText>
        <label>Local Opportunity Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Local Opportunity Owner)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue_Delta__c</fullName>
        <description>Summary Monthly Revenue Delta of all Opportunity Products which have checkbox &quot;Include In Revenue&quot; checked.</description>
        <inlineHelpText>Summary Monthly Revenue Delta of all Opportunity Products which have &quot;Include In Revenue&quot; checkbox checked.</inlineHelpText>
        <label>MRD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Amount_CopyOnly__c</fullName>
        <description>this formula field goes around the SFDC issue that occurs when downloading RollUp Summary data into GTS CE Data Warehouse, it is visible only for BI_DWH profile, no Page Layout is using this field</description>
        <formula>Non_Recurring_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Recurring Amount CopyOnly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Amount__c</fullName>
        <description>Sum on Non Recurring Prices from Relevant Requests</description>
        <inlineHelpText>Sum on Non Recurring Prices from Relevant Requests</inlineHelpText>
        <label>Non Recurring Amount</label>
        <summarizedField>OpportunityLineItem.Installation_Fee__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offer_Number__c</fullName>
        <description>Offer Number generated based on Owners Sales Code + Opportunity Number (without OPP) + Created Year - HU specific</description>
        <formula>if ( TEXT(GTS_Location__c) =  &quot;GTS Hungary&quot;,  OwnerUser__r.Sales_Code__c &amp;&quot;/&quot; &amp; Right(Opportunity_No__c, Len(Opportunity_No__c)-3) &amp;&quot;/&quot;&amp; TEXT(YEAR(DATEVALUE (CreatedDate))),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Offer Number generated based on Owners Sales Code + Opportunity Number (without OPP) + Created Year</inlineHelpText>
        <label>Offer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly_CopyOnly__c</fullName>
        <description>this formula field goes around the SFDC issue that occurs when downloading RollUp Summary data into GTS CE Data Warehouse, it is visible only for BI_DWH profile, no Page Layout is using this field</description>
        <formula>Opex_Monthly__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opex Monthly CopyOnly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly__c</fullName>
        <description>IS cost field. Summed up based on corresponding field on Opp. Product.</description>
        <inlineHelpText>Summary Opex Monthly of the deal.</inlineHelpText>
        <label>Opex Monthly</label>
        <summarizedField>OpportunityLineItem.Opex_Monthly__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opex_One_off_CopyOnly__c</fullName>
        <description>this formula field goes around the SFDC issue that occurs when downloading RollUp Summary data into GTS CE Data Warehouse, it is visible only for BI_DWH profile, no Page Layout is using this field</description>
        <formula>Opex_One_off__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opex One-off CopyOnly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_off__c</fullName>
        <description>IS cost field. Summed up based on corresponding field on Opp. Product.</description>
        <inlineHelpText>Summary Opex One-offof the deal.</inlineHelpText>
        <label>Opex One-off</label>
        <summarizedField>OpportunityLineItem.Opex_One_off__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Category__c</fullName>
        <description>Category of Opportunity</description>
        <label>Opportunity Category</label>
        <picklist>
            <picklistValues>
                <fullName>B-end</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backbone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Solution/Tender</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <description>Field required for repporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field required for repporting</inlineHelpText>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_No__c</fullName>
        <description>Displays autonumber as generated in other field,  Used among other things in email tempaltes.</description>
        <formula>Oppty_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity specific identifier.</inlineHelpText>
        <label>Opportunity No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <description>Source of Opportunity:
- Extranet - Opp. created from Extranet (PL)
- Extranet Weborder - Opp  created as part of extrantet weborder process/functionality</description>
        <inlineHelpText>Source of Opportunity:
- Extranet - Opp. created from Extranet (PL)
- Extranet Weborder - Opp  created as part of extrantet weborder process/functionality</inlineHelpText>
        <label>Opportunity Source</label>
        <picklist>
            <picklistValues>
                <fullName>Extranet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extranet Weborder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_age__c</fullName>
        <description>opportunity age = close date - create date</description>
        <formula>CloseDate - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>opportunity age</inlineHelpText>
        <label>Opportunity age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppty_Num__c</fullName>
        <description>Opportunity specific identifier in form of  autonumber.</description>
        <displayFormat>OPP{000000000}</displayFormat>
        <inlineHelpText>Opportunity specific identifier</inlineHelpText>
        <label>Oppty Num</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OwnerUser__c</fullName>
        <description>Relation to Owner User object with id the same as in Owner field. This is due to SFDC limitations where it was not possible to get to data stored on user  (notifications, reprots etc.)</description>
        <inlineHelpText>User as in Owner field.</inlineHelpText>
        <label>Owner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Bussiness_Unit__c</fullName>
        <formula>TEXT(OwnerUser__r.Business_Unit__c)</formula>
        <label>Owner Bussiness Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <description>Owner user email used in notifications</description>
        <formula>OwnerUser__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Owner user email used in notifications</inlineHelpText>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>Partner participating in sales Opportunity.</description>
        <inlineHelpText>Partner participating in sales Opportunity.</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <description>Email address from Partner Account which is related to Opportunity</description>
        <inlineHelpText>Email address from Partner Account which is related to Opportunity</inlineHelpText>
        <label>Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>Technical field storing assigned partner account name. This is to avoid SFDC goveronor limits triggered when the are to many SOQL queries.</description>
        <formula>Partner_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Technical field storing assigned partner account name. This is to avoid SFDC goveronor limits triggered when the are to many SOQL queries.</inlineHelpText>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_User__c</fullName>
        <description>Employee of sales partner  to which Opportunity belongs</description>
        <inlineHelpText>Employee of sales partner  to which Opportunity belongs</inlineHelpText>
        <label>Partner User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Partner User)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payback_Months__c</fullName>
        <description>(Total_Capex__c  / Gross_Margin__c)*12</description>
        <formula>(Total_Capex__c  / Gross_Margin__c)*12</formula>
        <inlineHelpText>(Total_Capex__c  / Gross_Margin__c)*12</inlineHelpText>
        <label>Payback [Months]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <description>International Retail specific.</description>
        <inlineHelpText>Proiducts in which customer is interested in.</inlineHelpText>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Data Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICT Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collocation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Revenue_CopyOnly__c</fullName>
        <description>this formula field goes around the SFDC issue that occurs when downloading RollUp Summary data into GTS CE Data Warehouse, it is visible only for BI_DWH profile, no Page Layout is using this field</description>
        <formula>Proposal_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Revenue CopyOnly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Revenue__c</fullName>
        <description>Summary Proposal Revenue of all relevant Requests (included into amount and not cancelled)</description>
        <inlineHelpText>Summary Proposal Revenue of all relevant Requests (included into amount and not cancelled)</inlineHelpText>
        <label>Proposal Revenue</label>
        <summarizedField>OpportunityLineItem.Proposal_Revenue__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ready_for_Service__c</fullName>
        <description>Ready for Service date</description>
        <inlineHelpText>Date when Products were ready for Service</inlineHelpText>
        <label>Ready for Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_Lost_Comments__c</fullName>
        <description>DEscriptive reason for losing opportunity</description>
        <inlineHelpText>Describe in details why the opportunity is lost</inlineHelpText>
        <label>Reason Lost Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <description>Reason for lost opportunity.</description>
        <inlineHelpText>Reason for lost opportunity.</inlineHelpText>
        <label>Reason Lost</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client resigned from service change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convergent offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient capacity in GTS network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand canceled by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrongly created OPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner lost the tender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Limit Exceeded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>IS specific. Reason for Service Order</description>
        <inlineHelpText>IS specific. Reason for Service Order</inlineHelpText>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_Opportunity__c</fullName>
        <description>International Retail specific. Relation to Regional Opportunity.</description>
        <inlineHelpText>Regional Opportunity in which this opportunity is included.</inlineHelpText>
        <label>Regional Opportunity</label>
        <referenceTo>Regional_Opportunity__c</referenceTo>
        <relationshipLabel>Local Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedOpportunity__c</fullName>
        <description>Relation to Opportunity i.e. when new opportunity is created based on closed one.</description>
        <inlineHelpText>Relation to Opportunity i.e. when new opportunity is created based on closed one.</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Received_Date__c</fullName>
        <description>Date when customer contacted GTS</description>
        <inlineHelpText>Date when customer contacted GTS</inlineHelpText>
        <label>Request Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Calculation__c</fullName>
        <description>SFDC Calculation selected as main one for this Opportunity</description>
        <inlineHelpText>SFDC Calculation selected as main one for this Opportunity</inlineHelpText>
        <label>Selected SFDC Calculation</label>
        <referenceTo>SFDC_Calculation__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Type_Auto__c</fullName>
        <description>Sales Type automatically calculated by the system</description>
        <inlineHelpText>Sales Type automatically calculated by the system</inlineHelpText>
        <label>Sales Type Auto</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Type_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informs wheather Sales Type is verified by OE or not</description>
        <inlineHelpText>Informs wheather Sales Type is verified by OE or not</inlineHelpText>
        <label>Sales Type Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <description>BU1000 division. Who is owning revenue from opportunity, Retail or Wholesale.</description>
        <inlineHelpText>BU1000 division. Who is owning revenue from opportunity, Retail or Wholesale.</inlineHelpText>
        <label>Sales Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selected_Calculation_Version__c</fullName>
        <description>BCT Calculation version selected for this Opportunity</description>
        <inlineHelpText>BCT Calculation version selected for this Opportunity</inlineHelpText>
        <label>Selected Calculation Version</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order_No__c</fullName>
        <description>IS specific. Identifier  in form of autonumber for Service Order Opportunities</description>
        <displayFormat>SOR{0000000000}</displayFormat>
        <inlineHelpText>Identifier  specific for Service Order Opportunities</inlineHelpText>
        <label>Service Order No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Simplified_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity created from Simplified Order</description>
        <inlineHelpText>Opportunity created from Simplified Order</inlineHelpText>
        <label>Simplified Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Data migration specific. Id of migrated record as in source system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Data migration specific. Id of migrated record as in source system.</inlineHelpText>
        <label>Source Record Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stage_Age__c</fullName>
        <description>Age in days of current Stage on Opportunity</description>
        <formula>IF(IsClosed=false,TODAY() - Stage_Start_Date__c,null)</formula>
        <inlineHelpText>Age in days of current Stage on Opportunity</inlineHelpText>
        <label>Stage Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_End_Date__c</fullName>
        <description>Last possible date to meet duration limit for stage</description>
        <formula>If ( TEXT(GTS_Location__c) =&quot;GTS Poland&quot; &amp;&amp; $RecordType.Name =&quot;Domestic&quot;&amp;&amp;ISBLANK(Stage_Restart_Date__c) , 

CASE( TEXT(StageName), 
&quot;Suspect&quot;, Stage_Start_Date__c+21, 
&quot;Prospect&quot;, Stage_Start_Date__c+21, 
&quot;Proposal&quot;, Stage_Start_Date__c+42, 
&quot;Negotiation&quot;, Stage_Start_Date__c+42, 
&quot;Contract Signature&quot;,Stage_Start_Date__c+14,null), 

If ( TEXT(GTS_Location__c) =&quot;GTS Poland&quot; &amp;&amp; $RecordType.Name =&quot;Domestic&quot;&amp;&amp;NOT(ISBLANK(Stage_Restart_Date__c)), 

CASE( TEXT(StageName), 
&quot;Suspect&quot;, Stage_Restart_Date__c+21, 
&quot;Prospect&quot;, Stage_Restart_Date__c+21, 
&quot;Proposal&quot;, Stage_Restart_Date__c+42, 
&quot;Negotiation&quot;,Stage_Restart_Date__c+42, 
&quot;Contract Signature&quot;,Stage_Restart_Date__c+14,null), 
null))</formula>
        <inlineHelpText>Last possible date to meet duration limit for stage</inlineHelpText>
        <label>Stage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Lost__c</fullName>
        <description>Stores stage name prior to Closed Lost</description>
        <inlineHelpText>Stores stage name prior to Closed Lost</inlineHelpText>
        <label>Stage Lost</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Restart_Date__c</fullName>
        <description>The date when when Opportunity has  been unfrozen.</description>
        <inlineHelpText>The date when when Opportunity has  been unfrozen.</inlineHelpText>
        <label>Stage Restart Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Start_Date__c</fullName>
        <description>Stores date when stage has changed to current</description>
        <inlineHelpText>Stores date when stage has changed to current</inlineHelpText>
        <label>Stage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Remaining__c</fullName>
        <description>Number of Days after which the limit will be reached for current Stage. can be different per GTS Location</description>
        <formula>If ( TEXT(GTS_Location__c) =&quot;GTS Poland&quot; &amp;&amp; $RecordType.Name =&quot;Domestic&quot;&amp;&amp;ISBLANK(Stage_Restart_Date__c) , 

CASE( TEXT(StageName), 
&quot;Suspect&quot;, 21 - Stage_Age__c , 
&quot;Prospect&quot;, 21 - Stage_Age__c, 
&quot;Proposal&quot;, 42 - Stage_Age__c, 
&quot;Negotiation&quot;, 42 - Stage_Age__c, 
&quot;Contract Signature&quot;,14 - Stage_Age__c, 0), 

If ( TEXT(GTS_Location__c) =&quot;GTS Poland&quot; &amp;&amp; $RecordType.Name =&quot;Domestic&quot;&amp;&amp;NOT(ISBLANK(Stage_Restart_Date__c)), 

CASE( TEXT(StageName), 
&quot;Suspect&quot;, 21 - (Today() -Stage_Restart_Date__c) , 
&quot;Prospect&quot;, 21 - (Today()- Stage_Restart_Date__c), 
&quot;Proposal&quot;, 42 - (Today()- Stage_Restart_Date__c), 
&quot;Negotiation&quot;, 42 - (Today()-Stage_Restart_Date__c), 
&quot;Contract Signature&quot;,14 - (Today()-Stage_Restart_Date__c), 0),null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Days after which the limit will be reached for current Stage</inlineHelpText>
        <label>Stage Time Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suspect_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that Opportunity Account was Approved by PM</description>
        <inlineHelpText>Indicates that Opportunity Account was Approved by PM</inlineHelpText>
        <label>Suspect Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Remaining__c</fullName>
        <description>Time remaining to planned Close Date</description>
        <formula>IF ( IsClosed =false,  CloseDate - TODAY(),null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time remaining to planned Close Date</inlineHelpText>
        <label>Time Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_2__c</fullName>
        <description>Created By Jan Rybovic, 2011-08-23 15:12 on Full Sandbox</description>
        <formula>Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_CopyOnly__c</fullName>
        <description>this formula field goes around the SFDC issue that occurs when downloading RollUp Summary data into GTS CE Data Warehouse, it is visible only for BI_DWH profile, no Page Layout is using this field</description>
        <formula>Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount CopyOnly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Summary value of all relevant Requests calculated with following formula per Request:
1. If Contract Length = 0 (not entered or indefinite period) =&gt; NRP + MRP * 12
2. If !=0 NRP * MRP * Contract Length [Months]</description>
        <inlineHelpText>Summary value of all relevant Requests calculated with following formula per Request:
1. If Contract Length = 0 (not entered or indefinite period)=&gt; NRP + MRP * 12
2. If !=0 NRP * MRP * Contract Length [Months]</inlineHelpText>
        <label>Total Amount</label>
        <summarizedField>OpportunityLineItem.Total_product_value__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Capex__c</fullName>
        <description>Capex One-off + Capex</description>
        <formula>Capex_One_off__c  + Capex__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Capex One-off + Capex</inlineHelpText>
        <label>Total Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_Details__c</fullName>
        <description>Subtype of Type field on Opportunity</description>
        <inlineHelpText>Subtype  of Opportunity</inlineHelpText>
        <label>Type Details</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal &amp; Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal &amp; Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Tender</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verification_Date__c</fullName>
        <description>Date &amp; Time of Credit Verification</description>
        <inlineHelpText>Date &amp; Time of Credit Verification</inlineHelpText>
        <label>Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Weighted_Difference_in_Amount__c</fullName>
        <formula>Difference_in_Amount__c*Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Difference in Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>XML_Comment__c</fullName>
        <description>Required to store information required by Extranet in reoard to added comment</description>
        <inlineHelpText>Stores information required by Extranet in regard to added comment</inlineHelpText>
        <label>XML Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>do_not_delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>user_role__c</fullName>
        <description>technical field storing currently logged user to avoid SFDC governor limits.</description>
        <formula>$UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays role of current user</inlineHelpText>
        <label>user_role</label>
        <type>Text</type>
    </fields>
</CustomObject>